# xhec-mlops-2025-project

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.yaml  Dockerfile.app  Makefile  PR_0.md  PR_1.md  PR_2.md  PR_3.md  PR_4.md  README.md  environment.yml  pre-commit-config.yaml  prefect.yaml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: ci.yaml
mlruns/0/: meta.yaml
notebooks/: eda.ipynb  modelling.ipynb
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/896408972567069252/: meta.yaml
notebooks/mlruns/896408972567069252/0dc53d1180b34486a99f8240c87bff11/: meta.yaml
notebooks/mlruns/896408972567069252/1e36d88b7e0d4f6a82d1f48b90490935/: meta.yaml
notebooks/mlruns/896408972567069252/2abda7ded2044d59aee762ac2fde4555/: meta.yaml
notebooks/mlruns/896408972567069252/3764500b14a3479691a83feb1044be02/: meta.yaml
notebooks/mlruns/896408972567069252/44ad3ffa1d6c41809635cf042eaf2708/: meta.yaml
notebooks/mlruns/896408972567069252/5dac82cf847946239e7f62f8c904c4fb/: meta.yaml
notebooks/mlruns/896408972567069252/6806b78be6c2419fbc74e11406edd9b9/: meta.yaml
notebooks/mlruns/896408972567069252/74dec31236e343b48d9038c53ed38175/: meta.yaml
notebooks/mlruns/896408972567069252/7dfcadc269b4497a867759cf6967ff56/: meta.yaml
notebooks/mlruns/896408972567069252/7fdb77ba495944989a1185c09e707056/: meta.yaml
notebooks/mlruns/896408972567069252/8c91ab1b060a4c779787da5bbd71ab63/: meta.yaml
notebooks/mlruns/896408972567069252/b30a6ec7c2ce474ca208766f5063edb6/: meta.yaml
notebooks/mlruns/896408972567069252/bd87f2ac2dc44e24b8fc03ec76b9c487/: meta.yaml
notebooks/mlruns/896408972567069252/d9770745561146c9bee93fe73211898f/: meta.yaml
notebooks/mlruns/896408972567069252/db33ff9c7dca43f8b81f9c5373df2cf3/: meta.yaml
notebooks/mlruns/896408972567069252/dbfa6851bb944953a1e7f0a5bf37e511/: meta.yaml
notebooks/mlruns/896408972567069252/e46b90485f7f49378d7ddd27955ba28b/: meta.yaml
notebooks/mlruns/896408972567069252/e4b1578fdc7747feb1d36feeeb9d91e1/: meta.yaml
notebooks/mlruns/896408972567069252/fc4579b3896848419fbb4496f418ed3e/: meta.yaml
notebooks/mlruns/models/Abalone_Age_Predictor/: meta.yaml
src/modelling/: main.py  predicting.py  preprocessing.py  training.py  utils.py  workflow.py
src/web_service/: main.py  utils.py
src/web_service/lib/: inference.py  models.py
src/web_service/local_objects/: model.pkl  predictions.csv  preprocessor.pkl
venv_mlpos_proj/: pyvenv.cfg
venv_mlpos_proj/Scripts/: activate  activate.bat
(+149 files in other folders)
