[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "xhec-mlops-project-student"
version = "0.0.1"
authors = [
  { name = "Wenxu Zhang", email = "wenxu.zhang@polytechnique.edu" },
  { name = "Jingyi FAN", email = "1155157249@link.cuhk.edu.hk" },
  { name = "Han Wang", email = "han.wang.2024@polytechnique.edu" },
  { name = "Chenghao Yu", email = "chenghao.yu.fr@gmail.com" },
  { name = "Siyuan Song", email = "ssiyuan73@gmail.com" }
] 

description = "X-HEC MLOps Project on Abalone age prediction model"
requires-python = ">3.10" # TODO: update this version

# TODO: add pydantic, pre-commit and ruff as a dependency
