[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xhec-mlops-project-student"
version = "0.0.1"
authors = [
  { name = "Wenxu Zhang", email = "wenxu.zhang@polytechnique.edu" },
  { name = "Jingyi Fan", email = "1155157249@link.cuhk.edu.hk" },
  { name = "Han Wang", email = "han.wang.2024@polytechnique.edu" },
  { name = "Chenghao Yu", email = "chenghao.yu.fr@gmail.com" },
  { name = "Siyuan Song", email = "ssiyuan73@gmail.com" }
]
  { name = "Jingyi FAN", email = "1155157249@link.cuhk.edu.hk" },
  { name = "Han Wang", email = "han.wang.2024@polytechnique.edu" },
  { name = "Chenghao Yu", email = "chenghao.yu.fr@gmail.com" },
  { name = "Siyuan Song", email = "ssiyuan73@gmail.com" }
] 

description = "X-HEC MLOps Project on Abalone age prediction model"
readme = "README.md"
requires-python = ">=3.11"

# TODO: add pydantic, pre-commit and ruff as a dependency

dependencies = [
  "pydantic>=2.0",
  "fastapi>=0.110",
  "uvicorn>=0.22",
  "scikit-learn>=1.4",
  "pandas>=2.0",
  "numpy>=1.26",
  "matplotlib>=3.8",
  "seaborn>=0.13",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=3.5",
  "ruff>=0.3",
  "pytest>=8.0",
  "black>=24.3",
  "isort>=5.13",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*"]
